調整文案和icon大小，新增 premium_plan 計畫

--- a/jetfi_wifi_jp/asia_00.html
+++ b/jetfi_wifi_jp/asia_00.html
@@ -88,6 +88,24 @@
 						</div>
 					</a>
 				</div>
+				<div class="premium_plan clearfix">
+					<div class="text_info">
+						<h4>Q. 中国プレミアムプランとはなんですか？ </h4>
+						<p>通常、中国本土では通信制限がかかっており、Google, Youtube, Facebook, Twitter, LINE等が使えません。<br>
+						中国プレミアムプランをお申込みいただく事で、中国本土でもGoogle, Youtube, Facebook, Twitter, LINEを自由にご利用いただけます。<br>
+						お仕事や旅行にて中国に滞在される際、上記サービスを使われる方は必ず中国プレミアムプランをお申込みください。</p>
+					</div>
+					<div class="plan_img clearfix">
+						<div>
+							<img src="images/vpn_01.png" alt="中国プレミアムプラン">
+							<p>中国プレミアムプラン</p>
+						</div>
+						<div>
+							<img src="images/vpn_02.png" alt="通常プラン">
+							<p>通常プラン</p>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
 		<!--footer-->
