--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -122,28 +122,32 @@
 				<ul class="area_info">
 					<li>
 						<h4 class="area_title">◆ アジア</h4>
-						<p class="info">中国、香港、マカオ、日本、台湾、韓国、シンガポール、マレーシア、インドネシア、フィリピン、タイ、ベトナム、カンボジア、ラオス、カザフスタン、モンゴル、インド、バングラデシュ、スリランカ、パキスタン、ネパール、ミャンマー 、アラブ首長国連邦、サウジアラビア、カタール、バーレーン、イスラエル、ヨルダン<br>
+						<p class="info">インド、インドネシア、カザフスタン、カンボジア、シンガポール、スリランカ、タイ、タジキスタン、ネパール、パキスタン、バングラデシュ、フィリピン、ブルネイ、ベトナム、マカオ、マレーシア、ミャンマー 、モンゴル、ラオス、韓国、香港、台湾、中国、日本<br>
 						※ モルディブ（ご利用する場合、お申込み後必ずサポートセンターにご連絡ください。）</p>
 					</li>
 					<li>
 						<h4 class="area_title">◆ ヨーロッパ</h4>
-						<p class="info">イギリス、アイルランド、フランス、モナコ、ドイツ、スイス、リヒテンシュタイン、オーストリア、オランダ、ベルギー、ルクセンブルク、デンマーク、ノルウェー、スウェーデン、フィンランド、オーランド諸島、アイスランド、スペイン、ポルトガル、イタリア、バチカン、サンマリノ、チェコ、ハンガリー、ギリシャ、トルコ、ロシア、ポーランド、クロアチア、アルバニア、ブルガリア、キプロス、エストニア、リトアニア、ラトビア、マルタ共和国、ルーマニア、セルビア、スロベニア、スロバキア、ウクライナ</p>
+						<p class="info">アイスランド、アイルランド、アルバニア、イギリス、イタリア、ウクライナ、エストニア、オーストリア、オーランド諸島、オランダ、ガーンジー島、キプロス、ギリシャ、クロアチア、サンマリノ、ジブラルタル、ジャージー島、スイス、スウェーデン、スペイン、スロバキア、スロベニア、セルビア、チェコ、デンマーク、ドイツ、トルコ、ノルウェー、バチカン、ハンガリー、フィンランド、フランス、ブルガリア、ベルギー、ポーランド、ボスニア・ヘルツェゴヴィナ、ポルトガル、マケドニア共和国、マルタ共和国、マン島、モナコ、モンテネグロ、ラトビア、リトアニア、リヒテンシュタイン、ルーマニア、ルクセンブルク、ロシア</p>
 					</li>
 					<li>
 						<h4 class="area_title">◆ 北アメリカ</h4>
-						<p class="info">アメリカ合衆国（ハワイ、アラスカ、グアム、サイパン含む）、カナダ、メキシコ、プエルトリコ</p>
+						<p class="info">アメリカ合衆国、アルバ、アングィラ、アンティグア・バーブーダ、イギリス領ヴァージン諸島、カナダ、キュラソー島、グアドループ、グレナダ、ケイマン諸島、ジャマイカ、セント・マーチン島、セントビンセント・グレナディーン、タークス・カイコス諸島、トリニーダド・ドバコ、ハイチ、プエルトリコ、マルティニーク、メキシコ</p>
 					</li>
 					<li>
 						<h4 class="area_title">◆ 南アメリカ</h4>
-						<p class="info">パナマ、コロンビア、ベネズエラ、ブラジル、アルゼンチン、チリ、ペルー、グアテマラ、ニカラグア、エルサルバドル共和国、コスタリカ、ボリビア、エクアドル、ウルグアイ、ドミニカ共和国</p>
+						<p class="info">アルゼンチン、ウルグアイ、エクアドル、エルサルバドル共和国、ガイアナ、グアテマラ、コスタリカ、コロンビア、スリナム、チリ、ドミニカ共和国、ニカラグア、パナマ、ブラジル、ベネズエラ、ペルー、ボリビア</p>
 					</li>
 					<li>
 						<h4 class="area_title">◆ オセアニア</h4>
-						<p class="info">オーストラリア、ニュージーランド、フィジー</p>
+						<p class="info">オーストラリア、グアム、サイパン、ニュージーランド、フィジー</p>
+					</li>
+					<li>
+						<h4 class="area_title">◆ 中東</h4>
+						<p class="info">アラブ首長国連邦、イスラエル、オマーンカタール、クウェート、サウジアラビア、バーレーン、ヨルダン</p>
 					</li>
 					<li>
 						<h4 class="area_title">◆ アフリカ</h4>
-						<p class="info">エジプト、ガーナ、ケニア、モロッコ、モーリシャス、ナイジェリア、チュニジア、タンザニア、南アフリカ共和国、ザンビア、アルジェリア、アンゴラ、西サハラ</p>
+						<p class="info">アルジェリア、アンゴラ、エジプト、ガーナ、ケニア、ザンビア、タンザニア、チュニジア、ナイジェリア、マダガスカル、モーリシャス、モロッコ、西サハラ、南アフリカ共和国</p>
 					</li>
 				</ul>
 			</section>
