iiot - 新增商店形象圖

--- a/iiot/app_web/admin - 191002/setting.html
+++ b/iiot/app_web/admin - 191002/setting.html
@@ -22,7 +22,27 @@
 				<p class="go_menu"><a href="index.html"><i class="fas fa-angle-left"></i> 回服務入口</a></p>
 			</div>
 			<ul class="list">
-				
+				<li class="upload_photo" style="background-image:url(images/shop_cover.jpg);">
+					<!-- photo_choosed -->
+					<a class="photo_choosed" href="#upload_photo" rel="modal:open">
+						<p>
+							<i class="fas fa-undo-alt"></i>
+							重新選擇商店形象圖<br>
+							<span>建議上傳尺寸為 1024px*760px, 4:3 比例效果尤佳。</span>
+						</p>
+					</a>
+				</li>
+				<li class="upload_photo">
+					<!-- upload_first -->
+					<a class="upload_first" href="#upload_photo" rel="modal:open">
+						<p>
+							<i class="far fa-image"></i>
+							請選擇商店形象圖<br>
+							<span>建議上傳尺寸為 1024px*760px, 4:3 比例效果尤佳。</span>
+						</p>
+					</a>
+				</li>
+
 				<li class="clearfix">
 					<p class="l_title">開啟線上收單</p>
 					<div class="btn_swtich clearfix">
