iiot - 測試點選選單滑到該區塊並亮起按鈕

--- a/iiot/app_web/shop- takeapart/shoppingcart_01.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_01.html
@@ -220,13 +220,22 @@
 				<p class="sub_title">購買<span class="f_red">5樣商品</span>或<span class="f_red">消費滿500元</span>即可外送</p>
 				<ul class="the_btn">
 					<li>
-						<p class="inside_in">內用</p>
+						<p class="btn_line inside_in">內用</p>
 					</li>
 					<li>
-						<p class="takeout_in">外帶</a></p>
+						<p class="btn_line takeout_in">外帶</p>
 					</li>
 					<li>
-						<p class="order_in">外送</p>
+						<p class="btn_line order_in">外送</p>
+					</li>
+				</ul>
+				<ul class="the_btn">
+					<!-- 選到 li 需加 the_selected -->
+					<li class="the_selected">
+						<input class="btn_line" type="submit" value="內用輸入桌號">
+					</li>
+					<li>
+						<input class="btn_line" type="submit" value="無桌號">
 					</li>
 				</ul>
 				<div class="a_box inside_show error_tips">
