--- a/iiot/app_web/shop- takeapart/shoppingcart_02.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_02.html
@@ -347,10 +347,10 @@
 				<h3 class="top_title">請選擇付款方式</h3>
 				<ul class="the_btn">
 					<li>
-						<p>現金付款</p>
+						<p class="btn_line">現金付款</p>
 					</li>
 					<li>
-						<p>線上付款</p>
+						<p class="btn_line">線上付款</p>
 					</li>
 				</ul>
 			</form>
