--- a/iiot/app_web/shop- takeapart/index_01.html
+++ b/iiot/app_web/shop- takeapart/index_01.html
@@ -22,14 +22,13 @@
     	.modal{box-shadow: 0 0 10px #0009;}
     </style>
     <script type="text/javascript">
-     $(function(){
-     	// top 菜單
-	  	$(".swiper-slide").click(function(){
-	  		$(this).parent().find(".swiper-slide p").removeClass("btn_in");
-	        $(this).find("p").addClass("btn_in");
-	    	return false;
-	    });
-	 });
+  //    $(function(){
+	 //  	$(".swiper-slide").click(function(){
+	 //  		$(this).parent().find(".swiper-slide p").removeClass("btn_in");
+	 //        $(this).find("p").addClass("btn_in");
+	 //    	return false;
+	 //    });
+	 // });
 	 $(function () {
  		$('#store_notice').modal('show');
 	});
@@ -93,115 +92,215 @@
 		</section>
 		<section class="the_productbox">
 			<div class="products_box">
-					<div class="top_title_box clearfix">
-						<h2>Category2</h2>
-					</div>
-					<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
-					<ul class="products_list style_one clearfix">
-						<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
-							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
-								<p class="sold"><span>售完</span></p>
-								
-							</div>
-							<div class="product_info">
-								<h3 class="product_title">毆姆蛋</h3>
-								<h4 class="sub_info">針對商品描</h4>
-								<p class="money">$129</p>
-								<!-- <div class="input_quantity the_disabled">
-			                        <button><i class="fas fa-minus"></i></button>
-			                        <input type="text" name="" value="" placeholder="0">
-			                        <a href="#food_items" rel="modal:open"><i class="fas fa-plus"></i></a>
-			                    </div> -->
-			                    <div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory">剩餘數量：2</p>
+				<div class="top_title_box clearfix">
+					<h2>Category 1</h2>
+				</div>
+				<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
-							</div>
-						</li>
-						<li class="the_selected  clearfix"><!-- no_photo -->
-							<p class="buy_nb">5</p>
-							<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
-							<div class="product_info">
-								<h3 class="product_title">產品BBB</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
-								<p class="money">$129</p>
-								<div class="btn_buy clearfix">
-			                        <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button>
-			                        <!-- <p class="btn_order"><a class="btn c_org" href="#food_items"  rel="modal:open">選購商品</a></p> -->
-			                        <p class="product_inventory">剩餘數量：2</p>
+						</div>
+					</li>
+					<li class="the_selected  clearfix"><!-- no_photo -->
+						<p class="buy_nb">5</p>
+						<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品BBB</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                   <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://fpscdn.yam.com/world/201803/6d/27/5aab81bdb6d27.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="photo" style="background-image: url(https://fpscdn.yam.com/world/201803/6d/27/5aab81bdb6d27.jpg);">
-								<p class="sold"><span>售完</span></p>
-							</div>
-							<div class="product_info">
-								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述...</h4>
-								<p class="money">$129</p>
-								<!-- <div class="input_quantity the_disabled">
-			                        <button><i class="fas fa-minus"></i></button>
-			                        <input type="text" name="" value="" placeholder="0">
-			                        <button><i class="fas fa-plus"></i></button>
-			                    </div> -->
-			                    <div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory">剩餘數量：2</p>
+						</div>
+					</li>
+					<li class="clearfix">
+						<p class="buy_nb">15</p>
+						<div class="photo" style="background-image: url(https://icrvb3jy.xinmedia.com/solomo/article/123934/FE1BAAB9-BA80-FEC2-27AD-1BC4B88634E4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                   <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="the_selected clearfix">
+						<p class="buy_nb">205</p>
+						<div class="photo" style="background-image: url(https://images.1111.com.tw/discussPic/77/51008577_7297009.2149911.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory"></p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 2</h2>
+				</div>
+				<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
-							</div>
-						</li>
-						<li class="clearfix">
-							<p class="buy_nb">15</p>
-							<div class="photo" style="background-image: url(https://icrvb3jy.xinmedia.com/solomo/article/123934/FE1BAAB9-BA80-FEC2-27AD-1BC4B88634E4.jpg);"></div>
-							<div class="product_info">
-								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
-								<p class="money">$129</p>
-								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory">剩餘數量：2</p>
+						</div>
+					</li>
+					<li class="the_selected  clearfix"><!-- no_photo -->
+						<p class="buy_nb">5</p>
+						<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品BBB</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                   <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 3</h2>
+				</div>
+				<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
-							</div>
-						</li>
-						<li class="the_selected clearfix">
-							<p class="buy_nb">205</p>
-							<div class="photo" style="background-image: url(https://images.1111.com.tw/discussPic/77/51008577_7297009.2149911.jpg);"></div>
-							<div class="product_info">
-								<h3 class="product_title">產品名稱產品名稱</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
-								<p class="money">$129</p>
-								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory"></p>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 4</h2>
+				</div>
+				<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
-							<div class="product_info">
-								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
-								<p class="money">$129</p>
-								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory">剩餘數量：25555</p>
-			                    </div>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
-							<div class="product_info">
-								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
-								<p class="money">$129</p>
-								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
-			                        <p class="product_inventory">剩餘數量：2</p>
-			                    </div>
-							</div>
-						</li>
-					</ul>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</section>
 
@@ -506,7 +605,7 @@
 	<script>
     	var swiper = new Swiper('.swiper-container');
 	</script>
-
+	<script  src="js/script.js"></script>
 </body>
 </html>
 
