--- a/iiot/app_web/shop- takeapart/index_02.html
+++ b/iiot/app_web/shop- takeapart/index_02.html
@@ -118,7 +118,7 @@
 								<h4 class="sub_info">針對商品描</h4>
 								<p class="money">$129</p>
 			                    <div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
@@ -131,7 +131,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button>
+			                        <!-- <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
@@ -145,7 +145,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
 			                    <div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
@@ -158,7 +158,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
@@ -171,7 +171,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory"></p>
 			                    </div>
 							</div>
@@ -183,7 +183,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：25555</p>
 			                    </div>
 							</div>
@@ -195,7 +195,7 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order">選購商品</button> -->
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
