--- a/iiot/app_web/shop- takeapart/index_01.html
+++ b/iiot/app_web/shop- takeapart/index_01.html
@@ -8,8 +8,6 @@
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link rel="stylesheet" href="css/style.css"> -->
-	<link rel="stylesheet" href="css/swiper.min.css">
 	<link rel="stylesheet" href="css/style-menu.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -22,13 +20,6 @@
     	.modal{box-shadow: 0 0 10px #0009;}
     </style>
     <script type="text/javascript">
-  //    $(function(){
-	 //  	$(".swiper-slide").click(function(){
-	 //  		$(this).parent().find(".swiper-slide p").removeClass("btn_in");
-	 //        $(this).find("p").addClass("btn_in");
-	 //    	return false;
-	 //    });
-	 // });
 	 $(function () {
  		$('#store_notice').modal('show');
 	});
@@ -56,21 +47,20 @@
 				  <div></div>
 				</div>
 			</div>
-			<!-- Swiper -->
-		  <div class="swiper-container">
-		    <div class="swiper-wrapper">
-		      <div class="swiper-slide"><p class="btn_in">Category 1</p></div>
-		      <div class="swiper-slide"><p>Category 2<span class="nb">5</span></p></div>
-		      <div class="swiper-slide"><p>Category 3</p></div>
-		      <div class="swiper-slide"><p>Category 4</p></div>
-		      <div class="swiper-slide"><p>Category 5</p></div>
-		      <div class="swiper-slide"><p>Category 6</p></div>
-		      <div class="swiper-slide"><p>如果文字有八個字</p></div>
-		      <div class="swiper-slide"><p>Category 8</p></div>
-		      <div class="swiper-slide"><p>Category 9</p></div>
-		      <div class="swiper-slide"><p>Category 10</p></div>
-		    </div>
-		  </div>
+		  	<div class="swiper-container">
+			    <div class="swiper-wrapper" style="width: 1000%;"><!-- 要算寬度的樣子 -->
+			      <div class="swiper-slide"><p class="btn_in">Category 1</p></div>
+			      <div class="swiper-slide"><p>Category 2<span class="nb">5</span></p></div>
+			      <div class="swiper-slide"><p>Category 3</p></div>
+			      <div class="swiper-slide"><p>Category 4</p></div>
+			      <div class="swiper-slide"><p>Category 5</p></div>
+			      <div class="swiper-slide"><p>Category 6</p></div>
+			      <div class="swiper-slide"><p>如果文字有八個字</p></div>
+			      <div class="swiper-slide"><p>Category 8</p></div>
+			      <div class="swiper-slide"><p>Category 9</p></div>
+			      <div class="swiper-slide"><p>Category 10</p></div>
+			    </div>
+		  	</div>
 		</section>
 		<div class="icon_group_buy">
 			<a href="index_02.html">
@@ -297,6 +287,275 @@
 							<p class="money">$129</p>
 							<div class="btn_buy clearfix">
 			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 5 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 5</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 6 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 6</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 7 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 7</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 8 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>如果文字有八個字</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 9 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 9</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
+			                </div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- 10 -->
+			<div class="products_box">
+				<div class="top_title_box clearfix">
+					<h2>Category 10</h2>
+				</div>
+				<ul class="products_list style_one clearfix">
+					<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
+						<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+							<p class="sold"><span>售完</span></p>
+						</div>
+						<div class="product_info">
+							<h3 class="product_title">毆姆蛋</h3>
+							<h4 class="sub_info">針對商品描</h4>
+							<p class="money">$129</p>
+			                <div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                    </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                    <p class="product_inventory">剩餘數量：2</p>
+			                </div>
+						</div>
+					</li>
+					<li class="clearfix">
+						<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
+						<div class="product_info">
+							<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
+							<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+							<p class="money">$129</p>
+							<div class="btn_buy clearfix">
+			                	<p class="product_inventory">剩餘數量：25555</p>
 			                </div>
 						</div>
 					</li>
@@ -597,15 +856,6 @@
 		  	</div>
 	    </div>
 	</main>
-
-	<!-- Swiper JS -->
-	<script src="js/swiper.min.js"></script>
-
-	<!-- Initialize Swiper -->
-	<script>
-    	var swiper = new Swiper('.swiper-container');
-	</script>
-	<script  src="js/script.js"></script>
 </body>
 </html>
 
