新增商品圖大圖 photo

--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -332,7 +332,8 @@
 	    </div>
 	    <!-- 請選擇 品項 與 加購-->
 	     <div id="food_items" class="modal fade fadebox food_items">
-	     	<p class="order_title">毆姆蛋</p>
+	     	<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
+	     	<!-- <p class="order_title">毆姆蛋</p> -->
 	    	<form>
 	    		<h3 class="top_title"><span><span class="must">*</span>請選擇外皮<i class="fas fa-caret-down"></i></span></h3>
 	    		<div class="option_list_box">
