--- a/hoi/html/2020601hoi.html
+++ b/hoi/html/2020601hoi.html
@@ -9,7 +9,6 @@
     <!--    <link rel="shortcut icon" href="http://www.i-house.com.tw//pub/images/favicon.ico" type="image/x-icon" />-->
     <!--    <link rel="apple-touch-icon" href="http://www.i-house.com.tw/pub/images/favicon.ico"/>-->
     <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- <link rel="stylesheet" href="css/style0521.css"> -->
     <link rel="stylesheet" href="css/style0530.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,400i,700,700i,900,900i|Noto+Sans+TC:100,300,400,500,700,900" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -274,7 +273,7 @@
                             </a>
                         </div>
                         <div class="btn_more pc">
-                            <p><a href="#" target="_blank">看更多MORE  ></a></p>
+                            <p><a href="https://www.trplus.com.tw/TR_Marketing/c/EC_10145042" target="_blank">看更多MORE  ></a></p>
                         </div>
                     </div>
                     <!-- right -->
@@ -363,7 +362,7 @@
                       </div>
                     </div>
                     <div class="btn_more mob">
-                        <p><a href="#" target="_blank">看更多MORE  ></a></p>
+                        <p><a href="https://www.trplus.com.tw/TR_Marketing/c/EC_10145042" target="_blank">看更多MORE  ></a></p>
                     </div>
                     <div class="clearfix"></div>
                 </div>
