--- a/hoi/html/2020601hoi.html
+++ b/hoi/html/2020601hoi.html
@@ -249,7 +249,7 @@
                 <img src="images/top_title_02.png" alt="小編帶你買">
             </div>
 
-            <div class="products-box ui-draggable ui-dragbox-outlined ui-hasproduct ui-productexpansion" sequencenumber="1" draftcatid="C" draftsnipid="1" draftproductcount="2" draftproductcountcopy="2" draftproductexpansion="Y" drafadbannercount="1" draftcarousel="false" draftistextcomponent="false" skucollection="014216369,014207751,014240740,014217276,014206947">
+            <div class="products-box ui-draggable ui-dragbox-outlined ui-hasproduct ui-productexpansion" sequencenumber="1" draftcatid="C" draftsnipid="1" draftproductcount="2" draftproductcountcopy="2" draftproductexpansion="Y" drafadbannercount="1" draftcarousel="false" draftistextcomponent="false" skucollection="014216369,014207751,014216215,014217276,014206947">
                 <div class="snippet-profile-C-1">
                     <!-- left -->
                     <div class="left-main-product">
@@ -301,17 +301,17 @@
                           </div>
                           <!-- 2 -->
                           <div class="SP-cp-wc50">
-                            <a href="https://www.trplus.com.tw/p/014240740" target="_blank" class="SP-singleProd-GDURL">
-                            <div class="SP-cp-sku-pdblock obj-changebgcolor SP-singleProd-GDItem iamSPSingleProdSKU" sp-singleprod-gdid="014240740" hereisspsingleprodsku="014240740">
-                              <div class="SP-cp-sku-pdimg"><img src="https://pcm2.trplus.com.tw/450x450/sys-master/productImages/h45/hbe/9353008939038/000000000014240740-gallery-01-20190707205010626.jpg" class="img-responsive SP-singleProd-GDIMG" alt=""></div>
+                            <a href="https://www.trplus.com.tw/p/014216215" target="_blank" class="SP-singleProd-GDURL">
+                            <div class="SP-cp-sku-pdblock obj-changebgcolor SP-singleProd-GDItem iamSPSingleProdSKU" sp-singleprod-gdid="014216215" hereisspsingleprodsku="014216215">
+                              <div class="SP-cp-sku-pdimg"><img src="https://pcm.trplus.com.tw/650x650/sys-master/productImages/h73/h2c/9273158565918/000000000014216215-gallery-01-20190412195038831.jpg" class="img-responsive SP-singleProd-GDIMG" alt=""></div>
                               <div class="SP-cp-sku-pdinfo">
-                                <h3 contenteditable="true" class="SP-singleProd-GDNM">林氏木業圓弧舒適實木腳可拆洗三人布沙發(附抱枕)RBN3K-深灰色</h3>
+                                <h3 contenteditable="true" class="SP-singleProd-GDNM">林氏木業奢華歐式頭層牛皮L型右貴妃四人皮沙發(附抱枕)2090-黃褐色</h3>
                                 <div class="SP-cp-sku-pdprice">
                                   <div class="SP-cp-sku-pdpriceold">
-                                    <em class="SP-singleProd-GDCPRCNM">原價</em><span class="SP-singleProd-GDCPRC" ischangecprcname="N">$19,990</span>
+                                    <em class="SP-singleProd-GDCPRCNM">原價</em><span class="SP-singleProd-GDCPRC" ischangecprcname="N">$42,800</span>
                                   </div>
                                   <div class="SP-cp-sku-pdpricenew">
-                                    <em class="SP-singleProd-GDPRCNM">爆殺價</em><span class="SP-singleProd-GDPRC" contenteditable="true" showwhatprice="ineedtoshow_saleprice">$13,593</span>
+                                    <em class="SP-singleProd-GDPRCNM">爆殺價</em><span class="SP-singleProd-GDPRC" contenteditable="true" showwhatprice="ineedtoshow_saleprice">$29,104</span>
                                   </div>
                                 </div>
                               </div>
