--- a/WS/weip/index.html
+++ b/WS/weip/index.html
@@ -451,6 +451,11 @@
                 <div class="copyright">© 2020 Wowprime.Corp. All rights reserved.</div>
             </div>
         </footer>
+        <div class="bg-anibox">
+            <div class="bg bg-color"></div>
+            <div id="bg-1" class="bg" style="background-image: url(images/bg-1.png);"></div>
+            <div id="bg-2" class="bg bg-multiply " style="background-image: url(images/bg-2.png);"></div>
+        </div>
         <!-- Pushy -->
         <script src="js/pushy.min.js"></script>
     </body>
