--- a/WS/weip/index.html
+++ b/WS/weip/index.html
@@ -21,8 +21,6 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="js/wow.js"></script>
-        <!-- Bootstrap core CSS -->
-        <!-- <link href="css/min.css" rel="stylesheet"> -->
 
         <!-- Font Awesome CSS -->
         <link href="fonts/fontawesome-free-5.11.2-web/css/all.min.css" rel="stylesheet">
@@ -32,21 +30,13 @@
 
         <!-- Pushy -->
         <link href="css/pushy.min.css" rel="stylesheet">
-        <!-- module -->
-        <!-- <link href="css/sweetalert2.css" rel="stylesheet" type="text/css" > -->
 
         <!-- CSS file -->
         <link rel="stylesheet" href="css/style.css">
-        <!-- <link href="css/home.css" rel="stylesheet"> -->
 
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="js/wow.js"></script>
         <script>
-            // scrollTop
-            // $(function(){
-            //     $('.pant-go').click(function(){ $('html,body').animate({scrollTop:$('#goThe01').offset().top}, 800); });
-            //   return false;
-            // });
             // animate
             $(function(){
                 new WOW().init();
@@ -62,6 +52,7 @@
         </script>
     </head>
     <body bgcolor="7bbaa9">
+        <!-- header -->
         <header class="header">
             <nav class="clearfix">
                 <a href="index.html" class="logo">
@@ -81,44 +72,9 @@
                         <p><span>2020 王品</span>創世代講堂</p>
                     </li>
                 </ul>
-                <!-- <div class="nav-mobile d-flex d-lg-none align-items-center">
-                    <button class="btn-default menu-btn">
-                        <div class="lines">
-                            <span class="line-1"></span>
-                            <span class="line-2"></span>
-                            <span class="line-3"></span>
-                        </div>
-                    </button>
-                </div> -->
             </nav>
         </header>
-
-        <!-- <nav class="pushy pushy-right">
-            <div class="pushy-content">
-                <ul class="main-nav">
-                    <li class="nav-item btn-01">
-                        <p>千萬投資計畫</p>
-                    </li>
-                    <li class="nav-item btn-02">
-                        <p>2020 評審團隊</p>
-                    </li>
-                    <li class="nav-item btn-03">
-                        <p>2020 精彩賽事影片</p>
-                    </li>
-                    <li class="nav-item btn-04">
-                        <p>2020 王品創世代講堂</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="pushy-close btn-close">
-                <span class="line">
-                </span>
-                <span class="line">
-                </span>
-            </div>
-        </nav> -->
-
-        
+        <!-- main -->
         <main class="main-wrapper">
             <!-- about -->
             <section class="about">
@@ -315,8 +271,8 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
-                                        王品「安心餐廳」 15品牌享優惠！
-                                        <!-- 形象篇(短版)  -->
+                                        <!-- 王品「安心餐廳」 15品牌享優惠！ -->
+                                        形象篇(短版) 
                                     </div>
                                 </div>
                             </div>
@@ -328,8 +284,8 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
-                                        王品集團 | 開箱王品外送！
-                                        <!-- 形象篇(長版) -->
+                                        <!-- 王品集團 | 開箱王品外送！ -->
+                                        形象篇(長版)
                                     </div>
                                 </div>
                             </div>
@@ -442,6 +398,7 @@
                 </ul>
             </section>
         </main>
+        <!-- footer -->
         <footer class="footer">
             <div class="ft-box">
                 <a class="WS" href="http://www.wowprime.com/" target="_blank" title="王品集團官網[另開新視窗]">
