移除 選單 hot 7快享店 & 更動瘋美食連結與名字

--- a/hot7/menu-ALaCarte.html
+++ b/hot7/menu-ALaCarte.html
@@ -139,10 +139,7 @@
               </li>
               <li>
                   <a href="menu-ALaCarte.html" class="d_block color_grey relative">單點</a>
-              </li>              
-              <!--<li>
-              <a href="../menu4.html" class="d_block color_grey relative">hot 7快享店</a>
-              </li>-->
+              </li>
               </ul>
               </li>
               <li class="container3d relative f_xs_none m_xs_bottom_5">
@@ -444,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
                           <i class="icon-mobile"></i>
                         </div>
-                        <a href="http://www.wowprime.com/event/app/award.html" target="_blank" class="color_black">瘋美食　　</a>
+                        <a href="http://wowfoods.cc/100/" target="_blank" class="color_black">王品瘋美食</a>
                     </li>
                       <li class="m_bottom_8 f_left m_right_10">
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
