--- a/hot7/index.html
+++ b/hot7/index.html
@@ -122,10 +122,7 @@
               </li>
               <li>
                   <a href="../menu-ALaCarte.html" class="d_block color_grey relative">單點</a>
-              </li>              
-             <!-- <li>
-              <a href="../menu4.html" class="d_block color_grey relative">hot 7快享店</a>
-              </li>-->
+              </li>
               </ul>
               </li>
               <li class="container3d relative f_xs_none m_xs_bottom_5">
@@ -451,7 +448,7 @@
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
                           <i class="icon-mobile"></i>
                         </div>
-                        <a href="https://wowfoods.wowprime.com/?utm_source=website115&utm_medium=banner&utm_campaign=poinet7&utm_content=20200511" target="_blank" class="color_black">瘋美食　　</a>
+                        <a href="http://wowfoods.cc/100/" target="_blank" class="color_black">王品瘋美食</a>
                     </li>
                       <li class="m_bottom_8 f_left m_right_10">
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
