--- a/hot7/store1_en.html
+++ b/hot7/store1_en.html
@@ -512,7 +512,7 @@
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
                           <i class="icon-mobile"></i>
                         </div>
-                        <a href="http://www.wowprime.com/event/app/award.html" target="_blank" class="color_black">瘋美食　　</a>
+                        <a href="http://wowfoods.cc/100/" target="_blank" class="color_black">王品瘋美食</a>
                       </li>
                       <li class="m_bottom_8 f_left m_right_10">
                         <div class="d_inline_m icon_wrap_size_2 icon_color circle m_right_5">
